--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+  <meta charset="UTF-8">
+  <title>EV Laadkost Calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="icon-192.png">
   <link rel="apple-touch-icon" href="icon-192.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#5BA9C2">
-  <meta charset="UTF-8">
-  <title>EV Laadkost Calculator</title>
   <style>
     :root { --bienviennue-blauw: #5BA9C2; }
     body {
@@ -25,7 +25,7 @@
       text-align: center;
       color: var(--bienviennue-blauw);
     }
-    label, .radio-label { display: block; margin-top: 1em; font-weight: bold; color: var(--bienviennue-blauw); }
+    label, .radio-label {
       display: block;
       margin-top: 1em;
       font-weight: bold;
@@ -67,7 +67,6 @@
     .hidden { display: none; }
     a { color: var(--bienviennue-blauw); }
   </style>
-  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <h1 id="title">🔌 EV Laadkost Calculator</h1>
@@ -176,10 +175,8 @@
 
       const arrivalCost = baseKwh * kwhPrice;
       const arrivalIncome = arrivalCost;
-      const kwhPerNight = 30;
-      const extraCost = (vehicleType === 'fullEV')
-        ? (days - 1) * kwhPerNight * kwhPrice
-        : (days - 1) * 15 * kwhPrice;
+      const kwhPerNight = vehicleType === 'fullEV' ? 30 : 15;
+      const extraCost = (days - 1) * kwhPerNight * kwhPrice;
       const extraIncome = (days - 1) * fixedRate;
 
       const totalCost = arrivalCost + extraCost;
@@ -187,7 +184,7 @@
       const totalProfit = totalIncome - totalCost;
       const winstPercentage = ((totalProfit / totalCost) * 100).toFixed(1);
 
-      const prijsLabel = `📆 Volgende ${days - 1} nacht(en) – obv ${vehicleType === 'fullEV' ? '30' : '15'} kWh/nacht aan €${kwhPrice.toFixed(4)}:`;
+      const prijsLabel = `📆 Volgende ${days - 1} nacht(en) – obv ${kwhPerNight} kWh/nacht aan €${kwhPrice.toFixed(4)}:`;
 
       document.getElementById('results').innerHTML = `
         <strong>📅 Overzicht voor ${days} nacht(en):</strong><br><br>
