--- a/index.html
+++ b/index.html
@@ -1,366 +1,74 @@
-<!DOCTYPE html>
 
-<!-- saved from url=(0052)https://bienviennue.github.io/laadkosten-calculator/ -->
-<html lang="nl"><head><meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>EV Laadkost Calculator</title>
-<link href="https://bienviennue.github.io/laadkosten-calculator/icon-192.png" rel="icon" type="image/png"/>
-<link href="https://bienviennue.github.io/laadkosten-calculator/icon-192.png" rel="apple-touch-icon"/>
-<link href="https://bienviennue.github.io/laadkosten-calculator/manifest.json" rel="manifest"/>
-<meta content="#5BA9C2" name="theme-color"/>
-<meta content="yes" name="apple-mobile-web-app-capable"/>
-<meta content="yes" name="mobile-web-app-capable"/>
-<style>
-    :root { --bienviennue-blauw: #5BA9C2; }
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>EV Laadkost Calculator</title>
+  <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 2em;
-      max-width: 750px;
-      margin: auto;
-      background: #f9f9f9;
-      color: #333;
+      margin: 2rem;
+      background: #f8f8f8;
     }
-    h1 {
-      font-size: 1.8em;
-      text-align: center;
-      color: var(--bienviennue-blauw);
-    }
-    label {
-      display: block;
-      margin-top: 1em;
-      font-weight: bold;
-      color: var(--bienviennue-blauw);
-    }
-    input, select {
-      width: 100%;
-      padding: 0.5em;
-      margin-top: 0.3em;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    .section {
-      margin-bottom: 2em;
+    .printable {
       background: white;
-      padding: 1em;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .overzicht {
+      margin-top: 2rem;
+      background: #fff;
+      border: 1px solid #ddd;
+      padding: 1rem;
       border-radius: 8px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.05);
     }
-    .radio-inline {
-      display: flex;
-      gap: 2em;
-      margin-top: 0.5em;
-    }
-    .radio-inline label {
-      display: flex;
-      align-items: center;
-      gap: 0.4em;
+    .bold {
       font-weight: bold;
-      color: var(--bienviennue-blauw);
     }
-    .result {
-      background: #ffffff;
-      padding: 1em;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    .icon {
+      margin-right: 6px;
     }
-    .tip {
-      font-size: 0.9em;
-      color: #666;
-    }
-    .print-button {
-      background: var(--bienviennue-blauw);
+    .btn {
+      padding: 10px 20px;
+      background-color: #5BA9C2;
       color: white;
       border: none;
-      padding: 0.5em 1em;
-      border-radius: 5px;
+      border-radius: 6px;
       cursor: pointer;
-      margin-top: 1em;
+      margin-top: 20px;
     }
-    .hidden { display: none; }
-    a { color: var(--bienviennue-blauw); }
-  
-@media print {
-  #explanation-print {
-    display: block !important;
-  }
-}
-.klanten-explanation {
-  display: none;
-  margin-top: 2em;
-}
-</style>
+  </style>
 </head>
 <body>
-<h1>🔌 EV Laadkost Calculator</h1>
-<label for="lang">🌍 Taal / Language / Langue:</label>
-<select id="lang">
-<option value="nl">Nederlands</option>
-<option value="en">English</option>
-<option value="fr">Français</option>
-</select>
-<div class="section">
-<label>⚡ Dagprijs elektriciteit per kWh (€):</label>
-<input id="kwhPrice" step="0.0001" type="number"/>
-<div class="tip">
-      Gebaseerd op ons EDF-contract:
-      <a href="https://particulier.edf.fr/fr/accueil/espace-client/mes-contrats.html" target="_blank">Bekijk contract</a>
-</div>
-<label>📈 Winstpercentage (%):</label>
-<input id="winstPercentage" max="300" min="0" step="1" type="number"/>
-<div class="tip">Wordt toegepast op forfait per nacht (standaard 57%)</div>
-<label>🛏️ Aantal overnachtingen:</label>
-<input id="days" min="1" type="number" value="3"/>
-<label>🚗 Type voertuig:</label>
-<div class="radio-inline">
-<label><input checked="" name="vehicleType" type="radio" value="fullEV"/> Full EV</label>
-<label><input name="vehicleType" type="radio" value="hybrid"/> Hybrid</label>
-</div>
-<label>🔋 Maximale batterijcapaciteit (kWh):</label>
-<input id="maxBattery" step="1" type="number"/>
-<div class="tip">Overschrijft standaardwaarden van 100 kWh (EV) of 15 kWh (Hybrid)</div>
-<div id="arrivalRateEVContainer">
-<label>💡 Voorstel aankomsttarief full EV (€):</label>
-<input id="arrivalRateEV" readonly="" type="number"/>
-<div class="tip">Break-even tarief o.b.v. 100 kWh of opgegeven capaciteit</div>
-</div>
-<div class="hidden" id="arrivalRateHybridContainer">
-<label>💡 Voorstel aankomsttarief hybrid (€):</label>
-<input id="arrivalRateHybrid" readonly="" type="number"/>
-<div class="tip">Break-even tarief o.b.v. 15 kWh of opgegeven capaciteit</div>
-</div>
-<div id="fixedRateContainer">
-<label>💶 Vast tarief per nacht vanaf nacht 2 (€):</label>
-<input id="fixedRate" step="0.01" type="number"/>
-</div>
-</div>
-<div class="result" id="results">
-<strong>📅 Overzicht voor 3 nacht(en):</strong><br/><br/>
-        🟢 <u>Dag van aankomst:</u><br/>
-        Onze kost: €21.24<br/>
-        Klant betaalt: €21.24<br/>
-        Winst: €0.00<br/><br/>
-<u>📆 Volgende 2 nacht(en) – obv 30 kWh/nacht aan €0.2124:</u><br/>
-        Onze kost: €12.74<br/>
-        Klant betaalt: €20.00<br/>
-        Winst: €7.26<br/><br/>
 
-        💰 <u>Totaal:</u><br/>
-        Totale kost: €33.98<br/>
-        Totale inkomst: €41.24<br/>
-        Totale winst: €7.26<br/>
-        Totale winstmarge: 21.4%
-      </div>
-<button class="print-button" onclick="window.print()">📄 Print of bewaar als PDF</button>
-<script>
-    function saveValue(id) {
-      localStorage.setItem(id, document.getElementById(id).value);
-    }
-
-    function loadDefaults() {
-      document.getElementById('kwhPrice').value = localStorage.getItem('kwhPrice') || 0.2124;
-      document.getElementById('winstPercentage').value = localStorage.getItem('winstPercentage') || 57;
-    }
-
-    function updateArrivalRates() {
-      const kwhPrice = parseFloat(document.getElementById('kwhPrice').value);
-      const winst = parseFloat(document.getElementById('winstPercentage').value);
-      const maxBattery = parseFloat(document.getElementById('maxBattery').value);
-      const vehicleType = document.querySelector('input[name="vehicleType"]:checked')?.value;
-
-      if (!vehicleType || isNaN(kwhPrice) || isNaN(winst)) return;
-
-      let baseKwh = vehicleType === 'fullEV' ? 100 : 15;
-      if (!isNaN(maxBattery)) baseKwh = maxBattery;
-
-      const arrivalRate = baseKwh * kwhPrice;
-      const fixedRate = 30 * kwhPrice * (1 + winst / 100);
-
-      if (vehicleType === 'fullEV') {
-        document.getElementById('arrivalRateEV').value = arrivalRate.toFixed(2);
-        document.getElementById('fixedRate').value = fixedRate.toFixed(2);
-      } else {
-        document.getElementById('arrivalRateHybrid').value = arrivalRate.toFixed(2);
-        document.getElementById('fixedRate').value = (15 * kwhPrice * (1 + winst / 100)).toFixed(2);
-      }
-    }
-
-    function calculate() {
-      const kwhPrice = parseFloat(document.getElementById('kwhPrice').value);
-      const winst = parseFloat(document.getElementById('winstPercentage').value);
-      const days = parseInt(document.getElementById('days').value);
-      const vehicleType = document.querySelector('input[name="vehicleType"]:checked')?.value;
-      const maxBattery = parseFloat(document.getElementById('maxBattery').value);
-      const fixedRate = parseFloat(document.getElementById('fixedRate').value);
-
-      if (!vehicleType || isNaN(kwhPrice) || isNaN(days) || isNaN(fixedRate) || isNaN(winst)) {
-        document.getElementById('results').innerHTML = '<strong style="color:red">Gelieve alle velden correct in te vullen.</strong>';
-        return;
-      }
-
-      let baseKwh = vehicleType === 'fullEV' ? 100 : 15;
-      if (!isNaN(maxBattery)) baseKwh = maxBattery;
-
-      const arrivalCost = baseKwh * kwhPrice;
-      const arrivalIncome = arrivalCost;
-      const kwhPerNight = vehicleType === 'fullEV' ? 30 : 15;
-      const extraCost = (days - 1) * kwhPerNight * kwhPrice;
-      const extraIncome = (days - 1) * fixedRate;
-
-      const totalCost = arrivalCost + extraCost;
-      const totalIncome = arrivalIncome + extraIncome;
-      const totalProfit = totalIncome - totalCost;
-      const winstPercentage = ((totalProfit / totalCost) * 100).toFixed(1);
-
-      const prijsLabel = `📆 Volgende ${days - 1} nacht(en) – obv ${kwhPerNight} kWh/nacht aan €${kwhPrice.toFixed(4)}:`;
-
-      document.getElementById('results').innerHTML = `
-        <strong>📅 Overzicht voor ${days} nacht(en):</strong><br><br>
-        🟢 <u>Dag van aankomst:</u><br>
-        Onze kost: €${arrivalCost.toFixed(2)}<br>
-        Klant betaalt: €${arrivalIncome.toFixed(2)}<br>
-        Winst: €0.00<br><br>
-
-        <u>${prijsLabel}</u><br>
-        Onze kost: €${extraCost.toFixed(2)}<br>
-        Klant betaalt: €${extraIncome.toFixed(2)}<br>
-        Winst: €${(extraIncome - extraCost).toFixed(2)}<br><br>
-
-        💰 <u>Totaal:</u><br>
-        Totale kost: €${totalCost.toFixed(2)}<br>
-        Totale inkomst: €${totalIncome.toFixed(2)}<br>
-        Totale winst: €${totalProfit.toFixed(2)}<br>
-        Totale winstmarge: ${winstPercentage}%
-      `;
-
-      saveValue('kwhPrice');
-      saveValue('winstPercentage');
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      loadDefaults();
-      document.querySelectorAll('input').forEach(input => input.addEventListener('input', () => {
-        updateArrivalRates();
-        calculate();
-      }));
-      document.querySelectorAll('input[name="vehicleType"]').forEach(radio => radio.addEventListener('change', () => {
-        document.getElementById('arrivalRateEVContainer').classList.toggle('hidden', radio.value !== 'fullEV');
-        document.getElementById('arrivalRateHybridContainer').classList.toggle('hidden', radio.value !== 'hybrid');
-        updateArrivalRates();
-        calculate();
-      }));
-      updateArrivalRates();
-      calculate();
-    });
-  </script>
-<div class="client-export" style="margin-bottom:2em;">
-<h3>🔌 Elektrisch laden bij BienViennue</h3>
-<p>Je kan bij ons je elektrische of hybride wagen opladen via onze eigen laadpaal. Omdat dit toestel geen historiek van het verbruik bijhoudt, werken wij met een duidelijke en eerlijke vaste prijs per verblijfsdag.</p>
-<p>Bij aankomst rekenen we een eenmalig bedrag aan, gebaseerd op een volledige laadbeurt:</p>
-<ul>
-<li>Voor een elektrische wagen rekenen we gemiddeld 100 kWh. Dat is wat nodig is om een grotere EV volledig op te laden, zoals een Tesla Model Y of een Hyundai Ioniq 5.</li>
-<li>Voor een hybride wagen hanteren we gemiddeld 15 kWh, wat overeenkomt met een volledige laadbeurt van de meeste plug-in hybrides.</li>
-</ul>
-<p>Voor elke extra overnachting betaal je een vast dagtarief, afgestemd op een gemiddeld dagelijks verbruik (we schatten dit op 30 kWh).</p>
-<p>De exacte prijs hangt af van de elektriciteitsprijs per kWh die wij op dat moment betalen.<br/>
+<div class="printable" id="printContent">
+  <h2>🔌 Elektrisch laden bij BienViennue</h2>
+  <p>Je kan bij ons je elektrische of hybride wagen opladen via onze eigen laadpaal. Omdat dit toestel geen historiek van het verbruik bijhoudt, werken wij met een duidelijke en eerlijke vaste prijs per verblijfsdag.</p>
+  <p>Bij aankomst rekenen we een eenmalig bedrag aan, gebaseerd op een volledige laadbeurt:</p>
+  <ul>
+    <li>Voor een elektrische wagen rekenen we gemiddeld 100 kWh. Dat is wat nodig is om een grotere EV volledig op te laden, zoals een Tesla Model Y of een Hyundai Ioniq 5.</li>
+    <li>Voor een hybride wagen hanteren we gemiddeld 15 kWh, wat overeenkomt met een volledige laadbeurt van de meeste plug-in hybrides.</li>
+  </ul>
+  <p>Voor elke extra overnachting betaal je een vast dagtarief, afgestemd op een gemiddeld dagelijks verbruik (we schatten dit op 30 kWh).</p>
+  <p>De exacte prijs hangt af van de elektriciteitsprijs per kWh die wij op dat moment betalen.<br>
   We voegen een marge toe die ons toelaat deze service rendabel aan te bieden, terwijl het voor jou als gast nog steeds voordeliger blijft dan publiek laden.</p>
-<p><strong>Zo weet je op voorhand waar je aan toe bent, zonder verrassingen achteraf.</strong></p>
+  <p><strong>Zo weet je op voorhand waar je aan toe bent, zonder verrassingen achteraf.</strong></p>
+
+  <div class="overzicht">
+    <h3>🧾 Overzicht voor de klant:</h3>
+    <p>🚗 <span class="bold">Type wagen:</span> Volledig elektrisch</p>
+    <p>📅 <span class="bold">Aantal nachten:</span> 3</p>
+    <p>⚡ Elektriciteitsprijs per kWh die wij betalen en jullie op aankomstdag: €0.2124</p>
+    <p>⚡ Elektriciteitsprijs per kWh die jullie betalen vanaf nacht 2 (met onze marge): €0.3335</p>
+    <p>🔋 Laadbeurt bij aankomst: 100 kWh → €21.24</p>
+    <p>📆 Dagelijkse kost vanaf nacht 2: €10.00</p>
+    <p>💶 <span class="bold">Totaalbedrag: €41.24</span></p>
+  </div>
 </div>
-<div class="client-export" id="clientExport" style="background:#ffffff; padding:1em; border-radius:8px; box-shadow:0 0 10px rgba(0,0,0,0.05); margin-top:2em;"></div>
-<button class="print-button" onclick="printClientExport()">🧾 Print klantenoverzicht</button>
-<script>
-    function updateClientExport(data) {
-      const lang = document.getElementById('lang')?.value || 'nl';
-      const translations = {
-        nl: {
-          title: "🧾 Overzicht voor de klant",
-          type: "Type wagen",
-          fullEV: "Volledig elektrisch",
-          hybrid: "Hybride",
-          nights: "Aantal nachten",
-          price: "Elektriciteitsprijs per kWh",
-          arrival: "Laadbeurt bij aankomst",
-          costPerNight: "Dagelijkse kost vanaf nacht 2",
-          total: "Totaalbedrag"
-        },
-        en: {
-          title: "🧾 Customer Summary",
-          type: "Vehicle type",
-          fullEV: "Full electric",
-          hybrid: "Hybrid",
-          nights: "Number of nights",
-          price: "Electricity price per kWh",
-          arrival: "Arrival day charge",
-          costPerNight: "Daily cost from night 2",
-          total: "Total amount"
-        },
-        fr: {
-          title: "🧾 Résumé pour le client",
-          type: "Type de véhicule",
-          fullEV: "Électrique",
-          hybrid: "Hybride",
-          nights: "Nombre de nuits",
-          price: "Prix de l’électricité par kWh",
-          arrival: "Recharge à l’arrivée",
-          costPerNight: "Coût par nuit à partir de la 2e",
-          total: "Montant total"
-        }
-      };
 
-      const t = translations[lang];
-      const html = `
-        <strong>${t.title}:</strong><br><br>
-        🚗 ${t.type}: ${t[data.vehicleType]}<br>
-        📅 ${t.nights}: ${data.days}<br>
-        ⚡ Elektriciteitsprijs per kWh die wij betalen en jullie op aankomstdag: €${data.kwhPrice.toFixed(4)}<br>⚡ Elektriciteitsprijs per kWh die jullie betalen vanaf nacht 2 (met onze marge): €${(data.kwhPrice * (1 + data.winst / 100)).toFixed(4)}<br>
-        🔋 ${t.arrival}: ${data.arrivalKwh} kWh → €${data.arrivalRate.toFixed(2)}<br>
-        📆 ${t.costPerNight}: €${data.fixedRate.toFixed(2)}<br><br>
-        💶 <strong>${t.total}: €${data.totalIncome.toFixed(2)}</strong>
-      `;
-      document.getElementById('clientExport').innerHTML = html;
-    }
+<button class="btn" onclick="window.print()">🖨️ Print klantenoverzicht</button>
 
-    function printClientExport() {
-      const content = document.getElementById('clientExport').innerHTML;
-      const win = window.open('', '', 'width=800,height=600');
-      win.document.write('<html><head><title>Export</title></head><body>');
-      win.document.write(content);
-      win.document.write('
-<script>
-  document.getElementById("printButton").addEventListener("click", function () {
-    window.open("EV_Laadkost_Calculator_Printoverzicht_juist.html", "_blank");
-  });
-</script>
-
-</body></html>');
-      win.document.close();
-      win.print();
-    }
-
-    // Bijwerken klantenexport na berekening
-    const origineleCalculate = calculate;
-    calculate = function() {
-      origineleCalculate();
-      const kwhPrice = parseFloat(document.getElementById('kwhPrice').value);
-      const winst = parseFloat(document.getElementById('winstPercentage').value);
-      const days = parseInt(document.getElementById('days').value);
-      const vehicleType = document.querySelector('input[name="vehicleType"]:checked')?.value;
-      const maxBattery = parseFloat(document.getElementById('maxBattery').value);
-      const fixedRate = parseFloat(document.getElementById('fixedRate').value);
-
-      let arrivalKwh = vehicleType === 'fullEV' ? 100 : 15;
-      if (!isNaN(maxBattery)) arrivalKwh = maxBattery;
-
-      const arrivalRate = arrivalKwh * kwhPrice;
-      const totalIncome = arrivalRate + ((days - 1) * fixedRate);
-
-      updateClientExport({ vehicleType, days, kwhPrice, arrivalKwh, arrivalRate, fixedRate, totalIncome, winst });
-    }
-  </script>
-
-<script>
-  document.getElementById("printButton").addEventListener("click", function () {
-    window.open("EV_Laadkost_Calculator_Printoverzicht_juist.html", "_blank");
-  });
-</script>
-
-</body></html>
+</body>
+</html>
